# proximity-db

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: distance.rs
proto/: grpc.proto
proximity/: Cargo.toml
proximity-cli/: Cargo.toml
proximity-cli/src/: main.rs
proximity-db/: Cargo.toml
proximity-db/src/: constellation_builder.rs  handler.rs  lib.rs  sky.rs  supported_sizes.rs
proximity-grpc/: Cargo.toml
proximity-grpc/proto/: grpc.proto
proximity-grpc/src/: lib.rs
proximity-server/: Cargo.toml
proximity-server/benches/: distance.rs
proximity-server/src/: constellation_builder.rs  handler.rs  sky.rs
proximity/benches/: distance.rs
proximity/src/: debug.rs  lib.rs  simd_vec.rs  simple.rs  vec.rs
src/: constellation.rs  grpc.rs  handler.rs  help.rs  lib.rs  sky.rs  supported_sizes.rs
src/collection/: mod.rs
src/constellation/: builder.rs  mod.rs  vec.rs
src/constellations/: mod.rs  vec.rs
