[package]
name = "embeddingdb"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.0"
typenum = "1.12.0"
rand = "0.7.3"
rayon = "1.3.0"
num-traits = "0.2.11"
approx = "0.3.2"

[dependencies.simba]
version = "0.1.2"
features = ["wide"]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "distance"
harness = false

[profile.release]
lto = true
codegen-units = 1
