[package]
name = "proximity-db"
version = "0.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "Nearest Neighbour Database"
license = "GPL-3.0"

[dependencies]
tonic = "0.2.1"
tokio = { version = "0.2.21", features = ["macros", "sync", "rt-core"] }
num_enum = "0.5.0"
enum-iterator = "0.6.0"
dashmap = "3.11.4"
anyhow = "1.0.31"
thiserror = "1.0.19"

proximity-grpc = { path = "../proximity-grpc", version = "0.1.1" }
proximity = { path = "../proximity", version = "0.1.1" }
