[package]
name = "proximity-grpc"
version = "0.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "ProximityDB GRPC bindings"
license = "GPL-3.0"

[dependencies]
tonic = "0.2.1"
prost = "0.6.1"
serde = { version = "1.0.114", features = ["derive"] }

[build-dependencies]
tonic-build = "0.2.0"
