[package]
name = "proximity"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.2"
nalgebra = "0.21.1"
rayon = "1.3.0"
simba = { version = "0.1.5", features = ["wide"] }
bytemuck = "1.2.0"

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "distance"
harness = false
