[package]
name = "proximity"
version = "0.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "Nearest neighbour search with pluggable backends"
license = " GPL-3.0"

[features]
default = ["simd"]
simd = ["nalgebra", "crossbeam-channel", "rayon", "simba", "bytemuck"]

[dependencies]
generic-array = "0.14.2"

crossbeam-channel = { version = "0.4.2", optional = true }
nalgebra = { version = "0.21.1", optional = true }
rayon = { version = "1.3.0", optional = true }
simba = { version = "0.1.5", features = ["wide"], optional=true }
bytemuck = { version="1.2.0", optional=true }

[dev-dependencies]
typenum = "1.12.0"
criterion = "0.3.2"
rand = "0.7.3"
num_cpus = "1.13.0"

[[bench]]
name = "distance"
harness = false
